Fixed icons alignment in Mobile view

--- a/social-connections.css
+++ b/social-connections.css
@@ -4,23 +4,18 @@
 	background-color: #3498DB;
 	display: inline-block;
 	padding: 5px 10px;
-	border: 2px solid black;
 }
 .sc2 {
 	float: right;
-	border: 2px solid green;
 }
 .sc3 {
 	color: white;
 	float: left;
-	border: 2px solid red;
 	padding: 5px  0px;
 }
 .sc4 {
 	display: flex;
 	flex-direction: row;
-	/*width: 168px;*/
-	border: 2px solid yellow;
 }
 .sc4 .facebook-icon {
 	background-image: url(images/social-connections-icons.png);
@@ -53,9 +48,19 @@
 @media only screen and (max-width: 400px){
 	.sc2 {
 		width: 100%;
+		float: none;
 	}
 	.sc3{
 		width: 100%;
 		text-align: center;
+	}
+	.sc4 {
+		width: 100%;
+	}
+	.facebook-icon, .twitter-icon, .google-icon, .instagram-icon{
+		width: 25%;
+	}
+	.sc4 .facebook-icon, .sc4 .twitter-icon, .sc4 .google-icon, .sc4 .instagram-icon{
+		margin: 0px auto;
 	}
 }
